--- a/src/data_digest/data_digest.ipynb
+++ b/src/data_digest/data_digest.ipynb
@@ -2,27 +2,167 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of tables in the database:\n",
+      "tweets_by_likes\n",
+      "tweets_likes_low\n",
+      "tweets_by_share\n",
+      "tweets_likes_medium\n",
+      "tweets_likes_high\n",
+      "tweets_likes_very_high\n",
+      "tweets_shares_low\n",
+      "tweets_shares_medium\n",
+      "tweets_shares_high\n",
+      "tweets_shares_very_high\n",
+      "user_tweets\n",
+      "user_tweets_part1\n",
+      "user_tweets_part2\n",
+      "user_tweets_part3\n",
+      "user_tweets_part4\n",
+      "tweets_by_word\n",
+      "tweets_by_date_2009\n",
+      "tweets_by_date_2011\n",
+      "tweets_by_date_2010\n",
+      "tweets_by_date_2012\n",
+      "tweets_by_date_2013\n",
+      "tweets_by_date_2014\n",
+      "tweets_by_date_2015\n",
+      "tweets_by_date_2016\n",
+      "tweets_by_date_2017\n"
+     ]
+    }
+   ],
    "source": [
     "import psycopg2\n",
     "from psycopg2.extras import execute_values\n",
     "\n",
     "# Establish a connection to the database\n",
     "# Adjust the connection parameters as necessary\n",
-    "conn = psycopg2.connect(\n",
-    "    dbname=\"twitty\",\n",
-    "    user=\"postgresuser\",\n",
-    "    password=\"postgrespassword\",\n",
-    "    host=\"localhost\",\n",
-    "    port=\"5432\"\n",
-    ")\n"
+    "#conn = psycopg2.connect(\n",
+    "#    dbname=\"twitty\",\n",
+    "#    user=\"postgresuser\",\n",
+    "#    password=\"postgrespassword\",\n",
+    "#    host=\"localhost\",\n",
+    "#    port=\"5432\"\n",
+    "#)\n",
+    "\n",
+    "\n",
+    "# Connection parameters - replace these with your actual parameters\n",
+    "dbname = 'twitty'\n",
+    "user = 'postgresuser'\n",
+    "password = 'postgrespassword'\n",
+    "host = 'localhost'  # Use 'localhost' if you're port-forwarding the service to your local machine\n",
+    "port = '5432'  # Default PostgreSQL port or the NodePort if exposed directly\n",
+    "\n",
+    "# SQL query to list tables in the database\n",
+    "sql_query = \"\"\"\n",
+    "SELECT table_name\n",
+    "FROM information_schema.tables\n",
+    "WHERE table_schema = 'public'\n",
+    "\"\"\"\n",
+    " # Connect to the database\n",
+    "conn = psycopg2.connect(dbname=dbname, user=user, password=password, host=host, port=port)\n",
+    "\n",
+    "    # Create a cursor for executing queries\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "    # Execute the SQL query\n",
+    "cur.execute(sql_query)\n",
+    "\n",
+    "    # Fetch the result (list of tables in the database)\n",
+    "tables = cur.fetchall()\n",
+    "print(\"List of tables in the database:\")\n",
+    "for table in tables:\n",
+    "    print(table[0])\n",
+    "\n",
+    "    # Close the cursor and the connection\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Author | Tweet Count\n",
+      "-------------------\n",
+      "rihanna | 2877\n",
+      "Cristiano | 2507\n",
+      "jimmyfallon | 3123\n",
+      "jtimberlake | 2478\n",
+      "KimKardashian | 2939\n",
+      "britneyspears | 2776\n",
+      "instagram | 2577\n",
+      "taylorswift13 | 2029\n",
+      "katyperry | 2924\n",
+      "YouTube | 3077\n",
+      "selenagomez | 2913\n",
+      "cnnbrk | 1842\n",
+      "shakira | 2530\n",
+      "ddlovato | 2217\n",
+      "BarackObama | 2863\n",
+      "ArianaGrande | 3104\n",
+      "TheEllenShow | 3147\n",
+      "ladygaga | 2329\n",
+      "Twitter | 2290\n",
+      "justinbieber | 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbname = 'twitty'  # The database name\n",
+    "user = 'postgresuser'  # The database user\n",
+    "password = 'postgrespassword'  # The user's password\n",
+    "host = 'localhost'  # Host address of the PostgreSQL server\n",
+    "port = '5432'  # Port number\n",
+    "\n",
+    "# The SQL query you want to execute\n",
+    "sql_query = \"SELECT author, COUNT(tweet_id) as tweet_count FROM user_tweets GROUP BY author;\"\n",
+    "\n",
+    "# Connect to the database\n",
+    "conn = psycopg2.connect(dbname=dbname, user=user, password=password, host=host, port=port)\n",
+    "    # Create a cursor object\n",
+    "cur = conn.cursor()\n",
+    "    # Execute the query\n",
+    "cur.execute(sql_query)\n",
+    "    # Fetch all rows from the query result\n",
+    "rows = cur.fetchall()\n",
+    "    # Process the result\n",
+    "print(\"Author | Tweet Count\")\n",
+    "print(\"-------------------\")\n",
+    "for row in rows:\n",
+    "    print(f\"{row[0]} | {row[1]}\")\n",
+    "    # Close the cursor and the connection\n",
+    "cur.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df = pd.read_csv('/Users/nofary/IDC/BDP/twitter-bdp/src/data_digest/tweets_df.csv', delimiter='\t')\n",
+    "twitter_df = pd.read_csv('./tweets_df.csv', delimiter='\t')\n",
     "# tweets_paritioned_by_word = pd.read_csv('/Users/nofary/IDC/BDP/twitter-bdp/src/data_digest/tweets_paritioned_by_word.csv', delimiter='\t')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +329,13 @@
     "import numpy as np\n",
     "import ast"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -310,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
